hphp/hack/test/typecheck/lambda/lambda23.php
<?hh // strict

function foo(): (function(int): int) {
  return (string $x) ==> 4;
}
